feat(console): make api proxy endpoint readonly

--- a/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/endpoint/edit/api-proxy-group-endpoint-edit.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/endpoint/edit/api-proxy-group-endpoint-edit.component.html
@@ -41,6 +41,7 @@
         [configurationForm]="configurationForm"
         [endpoint]="endpoint"
         [configurationSchema]="configurationSchema"
+        [isReadOnly]="isReadOnly"
         (onConfigurationChange)="onConfigurationChange($event)"
       ></api-proxy-group-endpoint-configuration>
     </div>
