--- a/gravitee-apim-console-webui/src/management/configuration/settings-navigation/settings-navigation.component.scss
+++ b/gravitee-apim-console-webui/src/management/configuration/settings-navigation/settings-navigation.component.scss
@@ -13,15 +13,12 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-import { StateService } from '@uirouter/core';
-import { IScope } from 'angular';
+@use 'sass:map';
 
-const SettingsComponent: ng.IComponentOptions = {
-  template: require('./settings.html'),
-  controller: function ($rootScope: IScope, $state: StateService) {
-    'ngInject';
-    this.$state = $state;
-  },
-};
-
-export default SettingsComponent;
+.settings-navigation {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  height: calc(100vh - 54px);
+  overflow-y: scroll;
+}
