--- a/gravitee-apim-console-webui/src/management/api/api-navigation/api-navigation-tabs/api-navigation-tabs.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/api-navigation/api-navigation-tabs/api-navigation-tabs.component.scss
@@ -13,14 +13,14 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-import { NgModule } from '@angular/core';
+@use 'sass:map';
+@use 'node_modules/@angular/material/index' as mat;
+@use 'node_modules/@gravitee/ui-particles-angular/index' as gio;
 
-import { ApiPortalDetailsModule } from './details/api-portal-details.module';
-import { ApiListModule } from './list/api-list.module';
-import { ApiProxyModule } from './proxy/api-proxy.module';
-import { ApiNavigationModule } from './api-navigation/api-navigation.module';
-
-@NgModule({
-  imports: [ApiListModule, ApiProxyModule, ApiPortalDetailsModule, ApiNavigationModule],
-})
-export class ApisModule {}
+.api-navigation-tabs {
+  display: flex;
+  align-items: center;
+  padding: 8px 8px 0;
+  width: 100%;
+  margin-bottom: 16px;
+}
