--- a/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/edit/service-discovery/api-proxy-group-service-discovery.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/edit/service-discovery/api-proxy-group-service-discovery.component.html
@@ -17,12 +17,16 @@
 -->
 <form *ngIf="!!serviceDiscoveryForm && !!serviceDiscoveryItems" [formGroup]="serviceDiscoveryForm" gioFormFocusInvalid>
   <mat-card>
-    <div class="card__group-sd__enable">
-      <div class="card__group-sd__enable__label">Enabled service discovery</div>
-      <mat-checkbox aria-label="Enable service discovery" formControlName="enabled">
-        By enabling service discovery, endpoints will be dynamically added or removed (without downtime).
-      </mat-checkbox>
-    </div>
+    <gio-form-slide-toggle appearance="fill" class="card__group-sd__enable">
+      <gio-form-label>Enabled service discovery</gio-form-label>
+      By enabling service discovery, endpoints will be dynamically added or removed (without downtime).
+      <mat-slide-toggle
+        gioFormSlideToggle
+        formControlName="enabled"
+        aria-label="Enable service discovery"
+        name="enableServiceDiscoveryConfiguration"
+      ></mat-slide-toggle>
+    </gio-form-slide-toggle>
 
     <!-- Type -->
     <div class="card__group-sd">
