--- a/gravitee-apim-console-webui/src/management/api/proxy/endpoints/list/api-proxy-endpoint-list.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/proxy/endpoints/list/api-proxy-endpoint-list.component.scss
@@ -10,6 +10,10 @@ $foreground: map.get(gio.$mat-theme, foreground);
 }
 
 .endpoint-list {
+  &__action {
+    margin: 0 4px;
+  }
+
   &__header {
     display: flex;
     justify-content: space-between;
