feat(submenu): add new component for Gateway navigation
APIM-101

--- a/gravitee-apim-console-webui/src/management/instances/_instances.scss
+++ b/gravitee-apim-console-webui/src/management/instances/_instances.scss
@@ -103,3 +103,20 @@
     color: #cdcdcd;
   }
 }
+
+.gravitee-instances-detail {
+  display: flex;
+  flex-direction: row;
+  height: calc(100vh - 54px);
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    width: 100%;
+
+    &__view {
+      overflow-y: auto;
+    }
+  }
+}
