--- a/gravitee-apim-console-webui/src/management/instances/details/instances-navigation/instances-navigation.component.html
+++ b/gravitee-apim-console-webui/src/management/instances/details/instances-navigation/instances-navigation.component.html
@@ -15,10 +15,13 @@
     limitations under the License.
 
 -->
-<div class="gravitee-instances-detail">
-  <instances-navigation></instances-navigation>
-  <div class="gravitee-instances-detail__content">
-    <instance-header instance="$ctrl.instance"></instance-header>
-    <div ui-view flex class="inset gravitee-instances-detail__content__view"></div>
-  </div>
+<div class="instances-navigation">
+  <gio-submenu class="instances-navigation__menu">
+    <ng-container *ngFor="let item of this.subMenuItems">
+      <gio-submenu-item *ngIf="!item.targetRoute">{{ item.displayName }}</gio-submenu-item>
+      <gio-submenu-subitem *ngIf="item.targetRoute" (click)="navigateTo(item.targetRoute)" [active]="isActive(item.baseRoute)">{{
+        item.displayName
+      }}</gio-submenu-subitem>
+    </ng-container>
+  </gio-submenu>
 </div>
