refactor:  add label for api details file picker

--- a/gravitee-apim-console-webui/src/management/api/details/api-portal-details-quality/api-portal-details-quality.component.html
+++ b/gravitee-apim-console-webui/src/management/api/details/api-portal-details-quality/api-portal-details-quality.component.html
@@ -29,7 +29,7 @@
         <mat-icon
           *ngIf="!qualityMetric.value"
           class="api-quality__content__list__item__red-icon"
-          svgIcon="gio:warning-circled-outline"
+          svgIcon="gio:alert-circle"
         ></mat-icon>
         <span class="api-quality__content__list__item__text">{{ qualityMetricsDescription[qualityMetric.key] }}</span>
       </div>
