--- a/gravitee-apim-console-webui/src/management/api/details/api-portal-details.component.html
+++ b/gravitee-apim-console-webui/src/management/api/details/api-portal-details.component.html
@@ -32,6 +32,9 @@
             <mat-label>Version</mat-label>
             <input matInput formControlName="version" required />
             <mat-error *ngIf="apiDetailsForm.controls.version.hasError('required')">Version is required.</mat-error>
+            <mat-error *ngIf="apiDetailsForm.controls.version.hasError('version')">{{
+              apiDetailsForm.controls.version.getError('version')
+            }}</mat-error>
           </mat-form-field>
         </div>
         <div class="details-card__header__info-inputs__second-row">
@@ -118,10 +121,10 @@
 
     <div>
       <button mat-button (click)="askForReview()"><mat-icon>file_upload</mat-icon> Export</button>
-      <button *gioPermission="{ anyOf: ['api-definition-u'] }" mat-button (click)="askForReview()">
+      <button *gioPermission="{ anyOf: ['api-definition-u'] }" mat-button (click)="importApi()">
         <mat-icon>file_download</mat-icon> Import
       </button>
-      <button *gioPermission="{ anyOf: ['api-definition-c'] }" mat-button (click)="askForReview()">
+      <button *gioPermission="{ anyOf: ['api-definition-c'] }" mat-button (click)="duplicateApi()">
         <mat-icon>content_copy</mat-icon> Duplicate
       </button>
       <button *gioPermission="{ anyOf: ['api-definition-u'] }" mat-button (click)="askForReview()" [disabled]="!canPromote">
