feat(console): impl export API in portal details component

--- a/gravitee-apim-console-webui/src/management/api/details/api-portal-details-quality/api-portal-details-quality.component.html
+++ b/gravitee-apim-console-webui/src/management/api/details/api-portal-details-quality/api-portal-details-quality.component.html
@@ -26,11 +26,7 @@
           class="api-quality__content__list__item__green-icon"
           svgIcon="gio:check-circled-outline"
         ></mat-icon>
-        <mat-icon
-          *ngIf="!qualityMetric.value"
-          class="api-quality__content__list__item__red-icon"
-          svgIcon="gio:alert-circle"
-        ></mat-icon>
+        <mat-icon *ngIf="!qualityMetric.value" class="api-quality__content__list__item__red-icon" svgIcon="gio:alert-circle"></mat-icon>
         <span class="api-quality__content__list__item__text">{{ qualityMetricsDescription[qualityMetric.key] }}</span>
       </div>
     </div>
