--- a/gravitee-apim-console-webui/src/management/api/details/api-portal-details-quality/api-portal-details-quality.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/details/api-portal-details-quality/api-portal-details-quality.component.scss
@@ -14,7 +14,7 @@
 
     &__score {
       flex: 1 1 100%;
-      margin: 32px;
+      margin: 32px 48px 32px 32px;
     }
 
     &__list {
@@ -28,6 +28,7 @@
         width: 50%;
         display: flex;
         align-items: center;
+        padding: 4px 0;
 
         &__text {
           margin-left: 8px;
@@ -38,7 +39,7 @@
         }
 
         &__green-icon {
-          color: mat.get-color-from-palette(gio.$mat-success-palette, 'default');
+          color: mat.get-color-from-palette(gio.$mat-success-palette, 'darker20');
         }
       }
     }
