--- a/gravitee-apim-console-webui/src/shared/components/gio-api-import-dialog/gio-api-import-dialog.component.html
+++ b/gravitee-apim-console-webui/src/shared/components/gio-api-import-dialog/gio-api-import-dialog.component.html
@@ -26,11 +26,11 @@
           <gio-form-file-picker accept=".yml,.yaml,.json,.wsdl,.xml" [ngModel]="filePickerValue" (ngModelChange)="onImportFile($event)">
             <gio-form-file-picker-add-button class="content__file-tab__file__add-btn">
               <div class="content__file-tab__file__add-btn__wrapper">
-                <span class="mat-body-strong"
-                  >Drag and drop a file to upload it. <br />
-                  Alternatively, click here to choose a file.</span
-                >
-                <p><code>Supported file formats: yml, yaml, json, wsdl, xml</code></p>
+                <p class="mat-body-strong">
+                  Drag and drop a file to upload it. <br />
+                  Alternatively, click here to choose a file.
+                </p>
+                <p>Supported file formats: yml, yaml, json, wsdl, xml.</p>
               </div>
             </gio-form-file-picker-add-button>
           </gio-form-file-picker>
@@ -87,7 +87,7 @@
       <div class="configs__checkbox">
         <mat-checkbox formControlName="importDocumentation">Create documentation</mat-checkbox>
         <div class="configs__checkbox__warn">
-          This will overwrite the swagger documentation if there is only one existing, or create it if it does not exist yet.
+          This will overwrite documentation if there is only one existing, or create it if it does not exist yet.
         </div>
       </div>
 
