feat: migrate instance-environment screen
https://graviteecommunity.atlassian.net/browse/APIM-287

--- a/gravitee-apim-console-webui/src/management/instances/details/instance-details-monitoring/instance-details-monitoring.component.html
+++ b/gravitee-apim-console-webui/src/management/instances/details/instance-details-monitoring/instance-details-monitoring.component.html
@@ -173,11 +173,9 @@
         <dt>Percent of use</dt>
         <dd>{{ monitoringData.cpu.percent_use + '%' }}</dd>
         <dt>Load average</dt>
-        <dd></dd>
-        <ng-container *ngFor="let loadAverage of monitoringData.cpu.load_average | keyvalue">
-          <dt class="gio-instance-details-monitoring__indicators__sublist">{{ loadAverage.key }}</dt>
-          <dd>{{ loadAverage.value }}</dd>
-        </ng-container>
+        <dd>
+          <div *ngFor="let loadAverage of monitoringData.cpu.load_average | keyvalue">[{{ loadAverage.key }}] {{ loadAverage.value }}</div>
+        </dd>
       </dl>
     </mat-card>
     <mat-card flex="50" data-testid="instance-monitoring_process-box">
