--- a/gravitee-apim-console-webui/src/management/api/api-navigation/api-navigation.component.html
+++ b/gravitee-apim-console-webui/src/management/api/api-navigation/api-navigation.component.html
@@ -31,13 +31,18 @@
         <gio-submenu-item *ngIf="!item.targetRoute && (!item.tabs || item.tabs.length == 0)">{{ item.displayName }}</gio-submenu-item>
         <gio-submenu-subitem
           *ngIf="!item.targetRoute && item.tabs?.length > 0"
+          tabIndex="1"
           (click)="navigateTo(item.tabs[0].targetRoute)"
           [active]="isTabActive(item.tabs)"
           >{{ item.displayName }}</gio-submenu-subitem
         >
-        <gio-submenu-subitem *ngIf="item.targetRoute" (click)="navigateTo(item.targetRoute)" [active]="isActive(item.baseRoute)">{{
-          item.displayName
-        }}</gio-submenu-subitem>
+        <gio-submenu-subitem
+          *ngIf="item.targetRoute"
+          tabIndex="1"
+          (click)="navigateTo(item.targetRoute)"
+          [active]="isActive(item.baseRoute)"
+          >{{ item.displayName }}</gio-submenu-subitem
+        >
       </ng-container>
     </gio-submenu>
   </div>
