--- a/gravitee-apim-console-webui/src/management/application/details/application-navigation/application-navigation.component.html
+++ b/gravitee-apim-console-webui/src/management/application/details/application-navigation/application-navigation.component.html
@@ -20,9 +20,13 @@
   <gio-submenu class="application-navigation__menu">
     <ng-container *ngFor="let item of this.subMenuItems">
       <gio-submenu-item *ngIf="!item.targetRoute">{{ item.displayName }}</gio-submenu-item>
-      <gio-submenu-subitem *ngIf="item.targetRoute" (click)="navigateTo(item.targetRoute)" [active]="isActive(item.baseRoute)">{{
-        item.displayName
-      }}</gio-submenu-subitem>
+      <gio-submenu-subitem
+        *ngIf="item.targetRoute"
+        tabIndex="1"
+        (click)="navigateTo(item.targetRoute)"
+        [active]="isActive(item.baseRoute)"
+        >{{ item.displayName }}</gio-submenu-subitem
+      >
     </ng-container>
   </gio-submenu>
 </div>
