--- a/gravitee-apim-console-webui/src/management/configuration/settings-navigation/settings-navigation.component.html
+++ b/gravitee-apim-console-webui/src/management/configuration/settings-navigation/settings-navigation.component.html
@@ -19,9 +19,13 @@
   <gio-submenu>
     <ng-container *ngFor="let item of this.filterMenuByPermission(this.subMenuItems)">
       <gio-submenu-item *ngIf="!item.targetRoute">{{ item.displayName }}</gio-submenu-item>
-      <gio-submenu-subitem *ngIf="item.targetRoute" (click)="navigateTo(item.targetRoute)" [active]="isActive(item.baseRoute)">{{
-        item.displayName
-      }}</gio-submenu-subitem>
+      <gio-submenu-subitem
+        *ngIf="item.targetRoute"
+        tabIndex="1"
+        (click)="navigateTo(item.targetRoute)"
+        [active]="isActive(item.baseRoute)"
+        >{{ item.displayName }}</gio-submenu-subitem
+      >
     </ng-container>
   </gio-submenu>
 </div>
