fix(console): use material by default, apply bootstrap only if necessary
APIM-223

--- a/gravitee-apim-console-webui/src/components/gio-side-nav/gio-side-nav.component.html
+++ b/gravitee-apim-console-webui/src/components/gio-side-nav/gio-side-nav.component.html
@@ -15,7 +15,7 @@
     limitations under the License.
 
 -->
-<div class="gio-side-nav mat mat-typography mat-app-background">
+<div class="gio-side-nav">
   <gio-menu>
     <gio-menu-header>
       <gio-menu-selector
